# decomposing-activations-local-geometry

./: .gitignore  CLAUDE.md  README.md  main.py  mfa_tutorial.py  pyproject.toml
analysis/: subspace_interpretation.py
data_utils/: build_pile_windows.py  concept_dataset.py  prova.py  shard_activations.py
experiments/: cluster_intrinsic_dim.py  cluster_overlap.py  run_layer.py
llm_utils/: activation_generator.py
modeling/: mfa.py  train.py
notebooks/: inspect_debug_activations.ipynb  inspect_pile_windows.ipynb  mfa_tutorial.py
outputs/experiments/8000_05/: visualize.ipynb
scripts/: benchmark_shard_io.py  sbatch_extract_activations.sh  sbatch_id.sh  sbatch_layer.sh  sbatch_train_shards.sh
scripts/slurm/: sbatch_extract_activations.sh  sbatch_id.sh  sbatch_layer.sh  sbatch_train_shards.sh
src/dalg/: __init__.py
src/dalg/analysis/: __init__.py  cluster_assignments.py  cluster_intrinsic_dim.py  cluster_overlap.py  subspace_interpretation.py  subspace_visualization.py
src/dalg/cli/: __init__.py  interpret_mfa.py  run_layer.py
src/dalg/data/: __init__.py
src/dalg/init/: __init__.py
src/dalg/intervention/: __init__.py  mfa_steering.py
src/dalg/llm/: __init__.py  activation_generator.py
src/dalg/models/: __init__.py  mfa.py  train.py
